# FakeNewsDetection

./: .env.example  .gitignore  LICENSE  README.md  chatbot.py  contactmail.py  countrycodes.py  newsfeed.py  pyproject.toml  requirements.txt  run_webapp.py  sendmessage.py  similarity.py  titletest.py  urlsecurity.py
archive/: README.md  clickbait.py  clickbait_model.py  isnewstitle.py  main.py  prog.py  questionanswer.py  right.py  subjectivemodel.py
archive/static/: newsstyle.css  progressbar.js  script.js  styles.css
archive/templates/: base.html  clickfail.html  mal.html  newsfeed.html  spellfail.html  subjecfail.html  true_news.html
datasets/: newsTitles.csv
fakenews_detector/: __init__.py  config.py  logging_setup.py  validator.py
fakenews_detector/checks/: __init__.py  base.py  clickbait.py  news_title.py  spelling.py  subjectivity.py  web_presence.py
fakenews_detector/models/: __init__.py  loaders.py
fakenews_detector/nlp/: __init__.py  preprocessing.py  similarity.py
static/: app.js
templates/: about.html  availweb.html  detect.html  index.html  new.html  newtitilefail.html  notaccessible.html
tests/: README.md  conftest.py
tests/unit/: test_config.py  test_validator.py
tests/unit/checks/: test_base.py  test_clickbait.py  test_news_title.py  test_spelling.py  test_subjectivity.py  test_web_presence.py
tests/unit/nlp/: test_preprocessing.py  test_similarity.py
tests/webapp/: conftest.py  test_app_factory.py  test_routes.py
training/: __init__.py  train_clickbait.py
webapp/: __init__.py  app.py  jobs.py  routes.py
webapp/static/: app.js  progress.js  styles.css
webapp/templates/: about.html  base.html  detect.html  error.html  index.html  progress.html  results.html
