[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fakenews detector"
version = "1.0.0"
description = "5-step rule-based fake news headline validator (refactor of a 2023 college project)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "vixha" }]
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "nltk>=3.8.1",
    "pyspellchecker>=0.8.0",
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "sentence-transformers>=2.7.0",
    "anthropic>=0.25.0",
]

[project.optional-dependencies]
webapp = [
    "flask>=3.0.0",
    "waitress>=3.0.0",
]

[tool.setuptools.packages.find]
include = ["fakenews_detector*", "training*", "webapp*"]
exclude = ["tests*"]
